--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
+    "sonner": "^2.0.7",
+    "toast": "^0.5.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
