--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,11 @@
     "@mui/x-charts": "^8.13.1",
     "axios": "^1.13.2",
     "chart.js": "^4.5.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.22",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
@@ -36,6 +40,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
